# ARIA_cpp

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/aria_cpp/lib/aria_cpp/: aria_ears  aria_terminal
install/aria_cpp/share/aria_cpp/: local_setup.sh  package.sh
log/: latest_build
src/aria_cpp/: CMakeLists.txt
src/aria_cpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/aria_cpp/install/aria_cpp/share/aria_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/aria_cpp/log/: latest_build
src/aria_cpp/src/: aria.cpp  aria_ears.cpp  aria_prompt.txt  aria_terminal.cpp  aria_tts.cpp
