cmake_minimum_required(VERSION 3.8)
project(aria_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(ament_index_cpp REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(PORTAUDIO REQUIRED portaudio-2.0)

add_executable(aria_terminal src/aria_terminal.cpp)
add_executable(aria_tts src/aria_tts.cpp)
add_executable(aria_ears src/aria_ears.cpp)
add_executable(aria src/aria.cpp)

ament_target_dependencies(aria_terminal rclcpp std_msgs)
ament_target_dependencies(aria_tts rclcpp std_msgs)
ament_target_dependencies(aria_ears rclcpp std_msgs)
ament_target_dependencies(aria rclcpp std_msgs ament_index_cpp)

target_include_directories(aria_ears PRIVATE
  ${PORTAUDIO_INCLUDE_DIRS}
  /home/krawlingkorpse/vosk-api/src
)
target_link_libraries(aria_ears
  ${PORTAUDIO_LIBRARIES}
  /home/krawlingkorpse/.local/lib/python3.12/site-packages/vosk/libvosk.so
)

target_include_directories(aria PRIVATE
  /home/krawlingkorpse/robotics/llama.cpp/include
  /home/krawlingkorpse/robotics/llama.cpp/ggml/include
)
target_link_libraries(aria
  /home/krawlingkorpse/robotics/llama.cpp/build/bin/libllama.so
)

install(TARGETS
  aria_terminal
  aria_tts
  aria_ears
  aria
  DESTINATION lib/${PROJECT_NAME}
)

install(FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/src/aria_prompt.txt
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
